[ux] small fixes for better readability

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,3 @@
-.avatar-wrapper.media-wrapper {
-  border-radius: 100%;
-}
 .avatar-radius {
   border-radius: 3px;
 }
@@ -1088,7 +1085,8 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0 0 30px 0;
+  margin-top: 0;
+  margin-bottom: 30px;
   color: #000;
   line-height: 1.25;
 }
@@ -1113,7 +1111,7 @@ h6 {
   color: #828c8f;
 }
 abbr {
-  color: #4d5659;
+  color: #828c8f;
   border-bottom: 1px dotted #b7c0c3;
 }
 small {
